--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 
+    <a th:href="@{/user/student/createAccountForm}">회원가입</a>
+    <a th:href="@{/user/student/loginForm}">로그인</a>
+    <a th:href="@{/user/student/modifyForm}">회원 수정</a>
+    <a th:href="@{/user/student/logoutConfirm}">로그아웃</a>
 </body>
 </html>
