--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -10,5 +10,7 @@
     <a th:href="@{/user/student/loginForm}">로그인</a>
     <a th:href="@{/user/student/modifyForm}">회원 수정</a>
     <a th:href="@{/user/student/logoutConfirm}">로그아웃</a>
+
+    <a th:href="@{/board/writeContentForm}">게시판 작성</a>
 </body>
 </html>
