--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,20 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>
+    <link rel="stylesheet" th:href="@{/css/home.css}">
 </head>
 <body>
-    <div class="wrap" th:if="${session.loginedStudentDto == null}">
-        <a th:href="@{/user/student/createAccountForm}">회원가입</a>
-        <a th:href="@{/user/student/loginForm}">로그인</a>
-    </div>
-    <div class="wrap" th:unless="${session.loginedStudentDto == null}">
-        <a th:href="@{/user/student/modifyAccountForm}">회원 수정</a>
-        <a th:href="@{/user/student/logoutConfirm}">로그아웃</a>
-    </div>
 
-    <a th:href="@{/board/writeContentForm}">게시판 작성</a>
+<!--    <header th:replace="~{/include/header_nav_footer.html::header}">-->
+<!--    </header>-->
+
+<section>
+    <div class="section-wrap">
+        <div class="info-container">
+            <div class="flex">
+                <div class="notice-container">
+                    <h2>Notice</h2>
+                </div>
+                <div class="timetable-container">
+                    <h2>Timetable</h2>
+                </div>
+            </div>
+            <div class="ad-container">
+                <h2>광고 광고 광고 광고</h2>
+            </div>
+            <div class="flex">
+                <div class="eng-word-container">
+                    <h2>English Word</h2>
+                </div>
+                <div class="menu-container">
+                    <h2>Menu</h2>
+                </div>
+            </div>
+        </div>
+        <div class="privacy-container">
+            <div class="login-container">
+                <h2>Login to Cozy Nest</h2>
+                <form th:if="${session.loginedStudentDto == null}">
+                    <button type="button" onclick="location.href='/user/student/loginForm';">Cozy Nest 로그인</button>
+                    <span><a href="#none">비밀번호 찾기</a></span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
+                    <span><a th:href="@{/user/student/createAccountForm}">회원가입</a></span>
+                </form>
+            </div>
+            <div class="point-container">
+                <h2>나의 상벌🐝점 현황</h2>
+            </div>
+            <div>
+
+            </div>
+            <div class="wrap" th:unless="${session.loginedStudentDto == null}">
+                <a th:href="@{/user/student/modifyForm}">회원 수정</a>
+                <a th:href="@{/user/student/logoutConfirm}">로그아웃</a>
+            </div>
+            <a th:href="@{/board/writeContentForm}">게시판 작성</a>
+        </div>
+    </div>
+</section>
+<!--    <div class="wrap" th:if="${session.loginedStudentDto == null}">-->
+<!--        <a th:href="@{/user/student/createAccountForm}">회원가입</a>-->
+<!--        <a th:href="@{/user/student/loginForm}">로그인</a>-->
+<!--    </div>-->
+
 
 </body>
 </html>
