--- a/src/main/resources/templates/include/headerNavFooter.html
+++ b/src/main/resources/templates/include/headerNavFooter.html
@@ -1,5 +1,14 @@
 <header th:fragment="header">
+<!--    <div class="wrap" th:if="${session.loginedStudentDto == null}">-->
+<!--        <a th:href="@{/user/student/createAccountForm}">회원가입</a>-->
+<!--        <a th:href="@{/user/student/loginForm}">로그인</a>-->
+<!--    </div>-->
+<!--    <div class="wrap" th:unless="${session.loginedStudentDto == null}">-->
+<!--        <a th:href="@{/user/student/modifyForm}">회원 수정</a>-->
+<!--        <a th:href="@{/user/student/logoutConfirm}">로그아웃</a>-->
+<!--    </div>-->
 
+<!--    <a th:href="@{/board/writeContentForm}">게시판 작성</a>-->
 </header>
 
 <nav th:fragment="nav">
