--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -37,7 +37,7 @@
             <div class="login-container">
                 <h2>Login to Cozy Nest</h2>
                 <form th:if="${session.loginedStudentDto == null}">
-                    <button type="button" onclick="location.href='/user/student/loginForm';">Cozy Nest 로그인</button>
+                    <button type="button" onclick="location.href='/user/loginForm';">Cozy Nest 로그인</button>
                     <span><a href="#none">비밀번호 찾기</a></span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
                     <span><a th:href="@{/user/student/createAccountForm}">회원가입</a></span>
                 </form>
