--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -4,8 +4,9 @@
     <title th:replace="~{/include/title.html::title}">
 
     </title>
+    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{/include/loginFormJs.html::js}" type="text/javascript"></script>
 
-    <script th:src="@{/js/student/loginForm.js}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -24,13 +25,14 @@
             로그인
         </div>
         <div class = "loginForm">
-            <form th:action = "@{/user/student/loginConfirm}" method="post" name = "loginForm">
+            <form th:action="@{/user/student/loginConfirm}" method="post" id = "loginForm" name = "loginForm">
+                <label><input type="radio" name="student" value="학생" checked="checked">학생</label>&nbsp;
+                <label><input type="radio" name="parents" value="학부모" >학부모</label><br>
                 <input type = "text" name = "id" placeholder="아이디"><br>
                 <input type = "password" name = "password" placeholder="비밀번호"><br>
                 <input type = "button" value="login" onclick="loginConfirm();">
                 <input type = "reset" value="reset">
             </form>
-
         </div>
     </div>
 </section>
