--- a/src/main/resources/templates/include/loginFormJs.html
+++ b/src/main/resources/templates/include/loginFormJs.html
@@ -30,13 +30,14 @@
         isStudent = false;
     });
 
-    $("#sectionWrap div.loginForm > input[value='login']").on('click', function (){
+    $("#sectionWrap div.loginForm input[value='login']").on('click', function (){
         console.log("login CLICK HANDLER!!!");
-
+        let formElement = document.loginForm;
         if(!isStudent){
-            let formElement = $("#loginForm");
-            formElement.attr("action","/user/parents/loginConfirm");
+            formElement.action = "/user/parents/loginConfirm";
         }
+
+        console.log(formElement.action);
 
         loginConfirm();
     });
@@ -64,41 +65,41 @@
 
 // AJAX START
 
-  function ajax_deleteAccount(no) {
-      console.log("ajax_deleteAccount");
-
-      msgDto = {
-          'no': no,
-      }
-
-      $.ajax({
-          url: '/user/student/deleteConfirm',
-          type: 'GET',
-          data: msgDto,
-          contentType: 'application/json; charset=utf-8',
-          dataType: 'json',
-          success: function(data) {
-              console.log('AJAX SUCCESS - ajax_deleteAccount()');
-
-              let result = data.result;
-
-              if(result > 0) {
-                  alert("탈퇴를 성공적으로 했습니다.");
-                  location.href = "/";
-              } else {
-                  alert("탈퇴를 실패했습니다.");
-                  location.href = "redirect:/user/student/modifyAccountForm";
-              }
-
-          },
-          error: function(data) {
-              console.log('AJAX ERROR - ajax_deleteAccount()');
-
-          }
-      });
-
-
-  }
+  // function ajax_deleteAccount(no) {
+  //     console.log("ajax_deleteAccount");
+  //
+  //     msgDto = {
+  //         'no': no,
+  //     }
+  //
+  //     $.ajax({
+  //         url: '/user/student/deleteConfirm',
+  //         type: 'GET',
+  //         data: msgDto,
+  //         contentType: 'application/json; charset=utf-8',
+  //         dataType: 'json',
+  //         success: function(data) {
+  //             console.log('AJAX SUCCESS - ajax_deleteAccount()');
+  //
+  //             let result = data.result;
+  //
+  //             if(result > 0) {
+  //                 alert("탈퇴를 성공적으로 했습니다.");
+  //                 location.href = "/";
+  //             } else {
+  //                 alert("탈퇴를 실패했습니다.");
+  //                 location.href = "redirect:/user/student/modifyAccountForm";
+  //             }
+  //
+  //         },
+  //         error: function(data) {
+  //             console.log('AJAX ERROR - ajax_deleteAccount()');
+  //
+  //         }
+  //     });
+  //
+  //
+  // }
 
 
 
