--- a/src/main/resources/templates/user/student/loginResult.html
+++ b/src/main/resources/templates/user/student/loginResult.html
@@ -14,7 +14,7 @@
     if (loginedStudentDto == null ) {
 
       alert('정상적으로 로그인 되지않았습니다.');
-      location.href="/user/student/loginForm";
+      location.href="/user/loginForm";
 
     } else {
 
