--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -30,7 +30,7 @@
                 <label><input type="radio" name="parents" value="학부모" >학부모</label><br>
                 <input type = "text" name = "id" placeholder="아이디"><br>
                 <input type = "password" name = "password" placeholder="비밀번호"><br>
-                <input type = "button" value="login" onclick="loginConfirm();">
+                <input type = "button" value="login">
                 <input type = "reset" value="reset">
             </form>
         </div>
