--- a/src/main/resources/templates/user/parents/createAccountForm.html
+++ b/src/main/resources/templates/user/parents/createAccountForm.html
@@ -49,8 +49,11 @@
                     <option value="naver.com">naver.com</option>
                     <option value="daum.net">daum.net</option>
                 </select><br>
-                주소 &nbsp;
-                <input type = "text" name = "address" placeholder="주소 입력하세요"><br>
+                우편번호<input type="text" readonly id="postcode" name = "zip_code" placeholder="우편번호">
+                <input type="button" onclick="getPostcode()" value="우편번호 찾기"><br>
+                주소<input type="text" id="address" name="address" placeholder="주소"><br>
+                <input type="text" id="detailAddress" name="address_detail1" placeholder="상세주소를 입력하세요."><br>
+                <input type="text" id="extraAddress" name="address_detail2" placeholder="참고항목"><br>
                 학교 이름 &nbsp;
                 <select name = "school_name">
                     <option value="">---선택해주세요----</option>
@@ -101,6 +104,7 @@
 <footer th:replace="~{/include/headerNavFooter.html::footer}">
 
 </footer>
-
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script th:src="@{/js/postCodeApi.js}" type="text/javascript"></script>
 </body>
 </html>
