--- a/src/main/resources/templates/user/student/createAccountForm.html
+++ b/src/main/resources/templates/user/student/createAccountForm.html
@@ -6,6 +6,9 @@
     </title>
 
     <script th:src="@{/js/student/createAccountForm.js}" type="text/javascript"></script>
+    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{/include/createAccountForm.html::js}" type="text/javascript"></script>
+
 </head>
 <body>
 
@@ -24,7 +27,9 @@
         </div>
         <div class = "createAccountForm">
             <form th:action = "@{/user/student/createAccountConfirm}" method="post" name = "createAccountForm">
-                <input type = "text" name = "id" placeholder="아이디"><br>
+                <input type = "text" name = "id" placeholder="아이디">
+                <input type = "button" id = "duplicationCheck" value = "아이디 중복 체크"><br>
+                <p id="duplicationResult"></p>
                 <input type = "password" name = "password" placeholder="비밀번호"><br>
                 <input type = "password" name = "password_again" placeholder="비밀번호 확인"><br>
                 <input type = "text" name = "name" placeholder="이름"><br>
