--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -7,7 +7,9 @@ body {
     align-items: center;
     min-height: 100vh;
     background-color: #f4f4f4;
+    flex-direction: column;
 }
+
 .section-wrap {
     display: flex;
 }
