--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -24,6 +24,7 @@
         <div class="word">
             로그인
         </div>
+        <div class ="loginConfirmResult"></div>
         <div class = "loginForm">
             <form th:action="@{/user/student/loginConfirm}" method="post" id = "loginForm" name = "loginForm">
                 <label><input type="radio" name="student" value="학생" checked="checked">학생</label>&nbsp;
