--- a/src/main/resources/templates/user/parents/createAccountForm.html
+++ b/src/main/resources/templates/user/parents/createAccountForm.html
@@ -4,7 +4,7 @@
     <title th:replace="~{/include/title.html::title}">
 
     </title>
-
+    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/createAccountForm.html::js}" type="text/javascript"></script>
 
 </head>
