--- a/src/main/resources/templates/board/writeContentResult.html
+++ b/src/main/resources/templates/board/writeContentResult.html
@@ -10,5 +10,5 @@
     alert("컨텐츠 업로드를 실패하였습니다..");
   }
   // window.location.href = '/board/freeBoardListForm';
-  window.location.href = '/';
+  window.location.href = '/board/freeBoardListForm';
 </script>
