OB-52-외박-폼-수정

--- a/src/main/resources/templates/user/student/leaveOutForm.html
+++ b/src/main/resources/templates/user/student/leaveOutForm.html
@@ -40,6 +40,7 @@
                 <input type="text" name="content" ><br>
                 외박 날짜
                 <input type="date" name="start_date"><br>
+                <input type="hidden" name="end_date">
                 <input type = "button" value="register" onclick="leaveOutConfirm();">
                 <input type = "reset" value="reset">
             </form>
