--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -5,7 +5,7 @@
 
     </title>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/loginFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{/include/member/loginFormJs.html::js}" type="text/javascript"></script>
 
 
 </head>
